--- a/SportsApp/View/Base.lproj/Main.storyboard
+++ b/SportsApp/View/Base.lproj/Main.storyboard
@@ -5,35 +5,88 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Sports-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SportsApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="SportsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oma-0g-6Jh">
-                                <rect key="frame" x="135" y="448" width="75" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4zU-Na-6lC">
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5xw-9d-Hcp">
+                                    <size key="itemSize" width="203" height="155"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="sportCell" id="Mem-kK-y4u" customClass="SportCollectionViewCell" customModule="SportsApp" customModuleProvider="target">
+                                        <rect key="frame" x="95" y="0.0" width="203" height="155"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="PSZ-Ch-rws">
+                                            <rect key="frame" x="0.0" y="0.0" width="203" height="155"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t37-zl-GcV">
+                                                    <rect key="frame" x="8" y="8" width="187" height="107"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6s6-FR-oGq">
+                                                    <rect key="frame" x="8" y="123" width="187" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="24" id="PEc-om-E42"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="6s6-FR-oGq" secondAttribute="bottom" constant="8" id="DHA-AF-x9G"/>
+                                                <constraint firstAttribute="trailing" secondItem="6s6-FR-oGq" secondAttribute="trailing" constant="8" id="JAc-p4-Pfh"/>
+                                                <constraint firstItem="t37-zl-GcV" firstAttribute="leading" secondItem="PSZ-Ch-rws" secondAttribute="leading" constant="8" id="PWb-gm-a56"/>
+                                                <constraint firstItem="6s6-FR-oGq" firstAttribute="leading" secondItem="PSZ-Ch-rws" secondAttribute="leading" constant="8" id="nTe-rc-t2Y"/>
+                                                <constraint firstItem="6s6-FR-oGq" firstAttribute="top" secondItem="t37-zl-GcV" secondAttribute="bottom" constant="8" id="omL-0c-lKM"/>
+                                                <constraint firstItem="t37-zl-GcV" firstAttribute="top" secondItem="PSZ-Ch-rws" secondAttribute="top" constant="8" id="pTp-6C-qwm"/>
+                                                <constraint firstAttribute="trailing" secondItem="t37-zl-GcV" secondAttribute="trailing" constant="8" id="yED-hw-9HJ"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="203" height="155"/>
+                                        <connections>
+                                            <outlet property="sportImg" destination="t37-zl-GcV" id="n4w-1S-YPl"/>
+                                            <outlet property="sportName" destination="6s6-FR-oGq" id="opl-es-peL"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
                                 <connections>
-                                    <segue destination="nAO-w9-zEI" kind="show" id="yYU-sr-ujT"/>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="k8o-s3-4vY"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Hzp-Sa-Vlv"/>
                                 </connections>
-                            </button>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4zU-Na-6lC" secondAttribute="bottom" id="66j-fn-2a7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4zU-Na-6lC" secondAttribute="trailing" id="aEo-tq-XcD"/>
+                            <constraint firstItem="4zU-Na-6lC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="osv-7l-v3b"/>
+                            <constraint firstItem="4zU-Na-6lC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="uRI-PV-DeA"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="qNB-hM-3Xg"/>
+                    <tabBarItem key="tabBarItem" title="Sports" image="soccerball" catalog="system" id="qNB-hM-3Xg"/>
+                    <connections>
+                        <outlet property="myCollection" destination="4zU-Na-6lC" id="GXr-2E-0c6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="673" y="-418"/>
+            <point key="canvasLocation" x="672.51908396946567" y="-418.3098591549296"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="NrB-zz-FVY">
@@ -62,28 +115,17 @@
             </objects>
             <point key="canvasLocation" x="1963" y="-418"/>
         </scene>
-        <!--Item-->
+        <!--Favourites-->
         <scene sceneID="EyC-bf-ict">
             <objects>
                 <viewController id="1C5-ka-Oxq" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fXp-o0-ht5">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Evc-ta-8IZ">
-                                <rect key="frame" x="221" y="160" width="75" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
-                                <connections>
-                                    <segue destination="nZt-D0-kIk" kind="show" id="plF-jC-14I"/>
-                                </connections>
-                            </button>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="W75-l5-ERN"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="6NB-zP-hGs"/>
+                    <tabBarItem key="tabBarItem" title="Favourites" image="suit.heart.fill" catalog="system" id="6NB-zP-hGs"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vWw-3z-5L8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -121,7 +163,7 @@
             <objects>
                 <viewController id="bN6-li-OTM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cXp-1J-uQY">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="8jT-qK-M0S"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -174,6 +216,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="rIy-A0-7MQ"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2Ye-HF-d2Y">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -191,6 +234,8 @@
         <segue reference="ubr-b7-Ek3"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="soccerball" catalog="system" width="128" height="123"/>
+        <image name="suit.heart.fill" catalog="system" width="128" height="107"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
