--- a/SportsApp/View/Base.lproj/Main.storyboard
+++ b/SportsApp/View/Base.lproj/Main.storyboard
@@ -186,7 +186,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vs" translatesAutoresizingMaskIntoConstraints="NO" id="krT-KL-DlM">
-                                                    <rect key="frame" x="0.0" y="0.0" width="380" height="128"/>
+                                                    <rect key="frame" x="8" y="8" width="364" height="112"/>
                                                 </imageView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="sby-Gc-hFz">
                                                     <rect key="frame" x="282" y="8" width="90" height="112"/>
@@ -199,7 +199,7 @@
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="21" id="S8N-Mw-QQ2"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -239,13 +239,17 @@
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VXV-Mv-fbU">
                                                             <rect key="frame" x="0.0" y="0.0" width="90" height="83"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="70" id="4Ce-bp-5aI"/>
+                                                                <constraint firstAttribute="width" constant="70" id="gtD-1a-tnK"/>
+                                                            </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qcg-s1-mHp">
                                                             <rect key="frame" x="0.0" y="91" width="90" height="21"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="21" id="2fa-uH-Udh"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -269,13 +273,13 @@
                                             <constraints>
                                                 <constraint firstItem="sby-Gc-hFz" firstAttribute="leading" secondItem="Lt0-6O-ywn" secondAttribute="trailing" constant="47" id="2Up-Ff-ZUp"/>
                                                 <constraint firstItem="Lt0-6O-ywn" firstAttribute="centerX" secondItem="dS4-gw-NKa" secondAttribute="centerX" id="3j5-bE-8T3"/>
+                                                <constraint firstItem="krT-KL-DlM" firstAttribute="top" secondItem="dS4-gw-NKa" secondAttribute="top" constant="8" id="5wg-kb-wBR"/>
+                                                <constraint firstItem="krT-KL-DlM" firstAttribute="leading" secondItem="dS4-gw-NKa" secondAttribute="leading" constant="8" id="8RP-Fy-fN5"/>
                                                 <constraint firstAttribute="bottom" secondItem="Wuf-bv-Mb1" secondAttribute="bottom" constant="8" id="Ehn-FK-MwT"/>
                                                 <constraint firstAttribute="trailing" secondItem="sby-Gc-hFz" secondAttribute="trailing" constant="8" id="H35-Fs-A8i"/>
                                                 <constraint firstItem="sby-Gc-hFz" firstAttribute="centerY" secondItem="dS4-gw-NKa" secondAttribute="centerY" id="LR3-qK-ycQ"/>
-                                                <constraint firstItem="krT-KL-DlM" firstAttribute="leading" secondItem="dS4-gw-NKa" secondAttribute="leading" id="Lxi-of-ePe"/>
                                                 <constraint firstItem="7ho-iq-KGD" firstAttribute="leading" secondItem="Wuf-bv-Mb1" secondAttribute="trailing" constant="20" id="QUC-ja-AmX"/>
                                                 <constraint firstItem="Wuf-bv-Mb1" firstAttribute="centerY" secondItem="dS4-gw-NKa" secondAttribute="centerY" id="QXt-Us-U4J"/>
-                                                <constraint firstItem="krT-KL-DlM" firstAttribute="top" secondItem="dS4-gw-NKa" secondAttribute="top" id="Sme-Ah-6Ig"/>
                                                 <constraint firstItem="7ho-iq-KGD" firstAttribute="centerY" secondItem="dS4-gw-NKa" secondAttribute="centerY" id="T22-ze-HjO"/>
                                                 <constraint firstItem="Wuf-bv-Mb1" firstAttribute="top" secondItem="dS4-gw-NKa" secondAttribute="top" constant="8" id="ZoR-F5-bK1"/>
                                                 <constraint firstItem="Lt0-6O-ywn" firstAttribute="top" secondItem="dS4-gw-NKa" secondAttribute="top" constant="8" id="bgL-mn-cNY"/>
@@ -283,11 +287,11 @@
                                                 <constraint firstItem="7ho-iq-KGD" firstAttribute="centerX" secondItem="dS4-gw-NKa" secondAttribute="centerX" id="f4M-Cc-NPn"/>
                                                 <constraint firstItem="VMm-8J-gaR" firstAttribute="centerX" secondItem="dS4-gw-NKa" secondAttribute="centerX" id="grl-Tp-KsW"/>
                                                 <constraint firstItem="sby-Gc-hFz" firstAttribute="leading" secondItem="7ho-iq-KGD" secondAttribute="trailing" constant="20" id="ivh-77-KYH"/>
-                                                <constraint firstAttribute="bottom" secondItem="krT-KL-DlM" secondAttribute="bottom" id="iwR-Qq-xmw"/>
                                                 <constraint firstAttribute="bottom" secondItem="sby-Gc-hFz" secondAttribute="bottom" constant="8" id="kYJ-SQ-2Zs"/>
                                                 <constraint firstItem="sby-Gc-hFz" firstAttribute="top" secondItem="dS4-gw-NKa" secondAttribute="top" constant="8" id="lMV-l7-Fb1"/>
-                                                <constraint firstAttribute="trailing" secondItem="krT-KL-DlM" secondAttribute="trailing" id="qOV-2e-jZc"/>
                                                 <constraint firstItem="Wuf-bv-Mb1" firstAttribute="leading" secondItem="dS4-gw-NKa" secondAttribute="leading" constant="8" id="uih-Os-NaR"/>
+                                                <constraint firstAttribute="bottom" secondItem="krT-KL-DlM" secondAttribute="bottom" constant="8" id="xFG-7T-jhC"/>
+                                                <constraint firstAttribute="trailing" secondItem="krT-KL-DlM" secondAttribute="trailing" constant="8" id="xVG-RC-f52"/>
                                                 <constraint firstItem="Lt0-6O-ywn" firstAttribute="leading" secondItem="Wuf-bv-Mb1" secondAttribute="trailing" constant="47" id="xYu-GY-PLv"/>
                                                 <constraint firstAttribute="bottom" secondItem="VMm-8J-gaR" secondAttribute="bottom" constant="8" id="yuf-xa-mHP"/>
                                                 <constraint firstItem="sby-Gc-hFz" firstAttribute="leading" secondItem="VMm-8J-gaR" secondAttribute="trailing" constant="47" id="z8B-Hq-4RT"/>
@@ -314,7 +318,7 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VUt-UP-6Gh">
                                                     <rect key="frame" x="0.0" y="0.0" width="162" height="136"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ecY-D3-HoW">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ecY-D3-HoW">
                                                     <rect key="frame" x="0.0" y="136" width="162" height="22"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="22" id="BgU-Jc-NgB"/>
@@ -341,14 +345,14 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
-                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="header" id="1W7-D7-peC" customClass="HeaderCollectionReusableView" customModule="SportsApp" customModuleProvider="target">
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="header" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="header" id="1W7-D7-peC" customClass="HeaderCollectionReusableView" customModule="SportsApp" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="393" height="50"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UB1-FG-27I">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UB1-FG-27I">
                                             <rect key="frame" x="8" y="0.0" width="377" height="50"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                            <nil key="textColor"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                            <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -375,7 +379,7 @@
                                             <action selector="backButton:" destination="nZt-D0-kIk" id="GyJ-Or-6By"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="0c1-ch-Dvt"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="N6U-z5-gJe"/>
                                     <barButtonItem title="Item" image="heart" catalog="system" id="tCc-tX-TFH">
                                         <connections>
                                             <action selector="favButton:" destination="nZt-D0-kIk" id="1HB-dH-McI"/>
