--- a/SportsApp/View/LeagueTableViewCell.xib
+++ b/SportsApp/View/LeagueTableViewCell.xib
@@ -17,7 +17,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oiw-6m-alw">
-                        <rect key="frame" x="70.000000000000028" y="8" width="384.66666666666674" height="54"/>
+                        <rect key="frame" x="70" y="8" width="445" height="54"/>
                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -29,22 +29,17 @@
                             <constraint firstAttribute="width" constant="54" id="BVv-6F-bVF"/>
                         </constraints>
                     </imageView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="youtube" translatesAutoresizingMaskIntoConstraints="NO" id="HaR-82-0RK">
-                        <rect key="frame" x="462.66666666666669" y="8" width="52.333333333333314" height="54"/>
-                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="3s4-CB-Lhw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="CvB-b6-4ix"/>
                     <constraint firstItem="Oiw-6m-alw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="GqF-Xq-pJ2"/>
-                    <constraint firstAttribute="bottom" secondItem="HaR-82-0RK" secondAttribute="bottom" constant="8" id="HBJ-T6-VGt"/>
-                    <constraint firstAttribute="trailing" secondItem="HaR-82-0RK" secondAttribute="trailing" constant="8" id="HTr-1e-70c"/>
                     <constraint firstItem="Oiw-6m-alw" firstAttribute="leading" secondItem="3s4-CB-Lhw" secondAttribute="trailing" constant="8" id="JCK-XT-rDk"/>
-                    <constraint firstItem="HaR-82-0RK" firstAttribute="leading" secondItem="Oiw-6m-alw" secondAttribute="trailing" constant="8" id="JXV-aq-42a"/>
+                    <constraint firstItem="Oiw-6m-alw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Q89-5r-kg5"/>
                     <constraint firstItem="3s4-CB-Lhw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="QGI-f6-zqw"/>
                     <constraint firstAttribute="bottom" secondItem="Oiw-6m-alw" secondAttribute="bottom" constant="8" id="RrO-Rk-CPt"/>
-                    <constraint firstItem="HaR-82-0RK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="klF-JP-xbx"/>
+                    <constraint firstAttribute="bottom" secondItem="Oiw-6m-alw" secondAttribute="bottom" constant="8" id="XY7-XI-0MH"/>
                     <constraint firstAttribute="bottom" secondItem="3s4-CB-Lhw" secondAttribute="bottom" constant="8" id="s8q-dG-cH2"/>
-                    <constraint firstItem="HaR-82-0RK" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.1" id="xmA-sm-wn1"/>
+                    <constraint firstAttribute="trailing" secondItem="Oiw-6m-alw" secondAttribute="trailing" constant="8" id="vgS-oK-alI"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -55,7 +50,4 @@
             <point key="canvasLocation" x="260.30534351145036" y="3.5211267605633805"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="youtube" width="256" height="256"/>
-    </resources>
 </document>
