--- a/SportsApp/View/Base.lproj/LaunchScreen.storyboard
+++ b/SportsApp/View/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,17 +15,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sport" translatesAutoresizingMaskIntoConstraints="NO" id="60B-rS-CRr">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sport" translatesAutoresizingMaskIntoConstraints="NO" id="60B-rS-CRr">
+                                <rect key="frame" x="0.0" y="59" width="393" height="793"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="60B-rS-CRr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2lF-rT-lB1"/>
                             <constraint firstItem="60B-rS-CRr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="VdS-zk-EOo"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="60B-rS-CRr" secondAttribute="bottom" id="gh0-gn-70p"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="60B-rS-CRr" secondAttribute="trailing" id="jf6-Mg-39x"/>
+                            <constraint firstAttribute="bottom" secondItem="60B-rS-CRr" secondAttribute="bottom" id="tJk-tr-AHC"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -37,8 +35,5 @@
     </scenes>
     <resources>
         <image name="sport" width="450" height="450"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
